--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,7 @@
 Ikhoon Chon <darkchoco@cloudscape.kr>
 :toc:
 
-== 내용
+=== 내용
 보다 세부적인 내용은 개인 위키 참조.
 
 * classical-computer-science-problems
@@ -12,15 +12,16 @@ Ikhoon Chon <darkchoco@cloudscape.kr>
 ** 다양한 예제 및 실습코드를 포함한다.
 ** 포함된 내용
 *** bitset
+*** bytearray
 
 * logging
 ** https://www.baeldung.com/logback[A Guide To Logback]
 
-== 방법
+=== 방법
 Unit Testing 을 적극 활용한다.  +
 https://www.baeldung.com/java-unit-testing-best-practices[Best Practices For Unit Testing In Java] 참조.
 
-== Reference
+=== Reference
 아래 서적들에 사용된 코드를 일부 포함하며 그 내용도 원본과 상당히 차이가 있을 수 있다.
 
 * Classic Computer Science Problems in Java (2020)
